Feat/addons (#1757)
* update translations manually to reset crowdin

* Update typo in worldguard compatibility.

* Remove outdated platform spec.

* Adjust changelog.

* Adjust default display type to 3 for when display entity type is returned.

* Add owner override for towny purges when the purge is attached to no owner.

* Fix bungee chat forward.

* Style fixes.

* Reformat code to Style guides.

* Update changelog.

* Add final where possible.

* Add style guidelines

* Add revamped contributing instructions.

* Add remaining stock to shop icon for /qs browse.

* Update changelog for accepted PRs.

* Add global option for qs find.