@@ -27,97 +27,100 @@ import static com.ghostchu.quickshop.menu.ShopHistoryMenu.SHOPS_DATA;
 
 public class SubCommand_History implements CommandHandler<Player> {
 
-    private final QuickShop plugin;
+  private final QuickShop plugin;
 
-    public SubCommand_History(QuickShop plugin) {
-        this.plugin = plugin;
-    }
+  public SubCommand_History(final QuickShop plugin) {
 
-    @Override
-    public void onCommand(@NotNull Player sender, @NotNull String commandLabel, @NotNull CommandParser parser) {
-        final List<Shop> shops = new ArrayList<>();
-        if (parser.getArgs().isEmpty()) {
-            if (!plugin.perm().hasPermission(sender, "quickshop.history")) {
-                plugin.text().of(sender, "no-permission").send();
-                return;
-            }
-            final Shop shop = getLookingShop(sender);
-            if (shop == null) {
-                plugin.text().of(sender, "not-looking-at-shop").send();
-                return;
-            }
-            if (!shop.playerAuthorize(sender.getUniqueId(), BuiltInShopPermission.VIEW_PURCHASE_LOGS) && !plugin.perm().hasPermission(sender, "quickshop.other.history")) {
-                plugin.text().of(sender, "no-permission");
-                return;
-            }
-            shops.add(shop);
-        } else {
-            switch(parser.getArgs().get(0).toLowerCase(Locale.ROOT)) {
-                case "owned" -> {
-                    if(!plugin.perm().hasPermission(sender, "quickshop.history.owned")) {
-                        plugin.text().of(sender, "no-permission").send();
-                        return;
-                    }
-                    shops.addAll(plugin.getShopManager().getAllShops(sender.getUniqueId()));
-                }
-                case "accessible" -> {
-                    if(!plugin.perm().hasPermission(sender, "quickshop.history.accessible")) {
-                        plugin.text().of(sender, "no-permission").send();
-                        return;
-                    }
-                    shops.addAll(plugin.getShopManager().getAllShops()
-                            .stream().filter(s->s.playerAuthorize(sender.getUniqueId(), BuiltInShopPermission.VIEW_PURCHASE_LOGS)).toList());
-                }
-                case "global" -> {
-                    if(!plugin.perm().hasPermission(sender, "quickshop.history.global")) {
-                        plugin.text().of(sender, "no-permission").send();
-                        return;
-                    }
-                    shops.addAll(plugin.getShopManager().getAllShops());
-                }
-                default -> {
-                    plugin.text().of(sender, "command-incorrect", "/quickshop history <owned/accessible/global/[leave empty]>").send();
-                    return;
-                }
-            }
+    this.plugin = plugin;
+  }
+
+  @Override
+  public void onCommand(@NotNull final Player sender, @NotNull final String commandLabel, @NotNull final CommandParser parser) {
+
+    final List<Shop> shops = new ArrayList<>();
+    if(parser.getArgs().isEmpty()) {
+      if(!plugin.perm().hasPermission(sender, "quickshop.history")) {
+        plugin.text().of(sender, "no-permission").send();
+        return;
+      }
+      final Shop shop = getLookingShop(sender);
+      if(shop == null) {
+        plugin.text().of(sender, "not-looking-at-shop").send();
+        return;
+      }
+      if(!shop.playerAuthorize(sender.getUniqueId(), BuiltInShopPermission.VIEW_PURCHASE_LOGS) && !plugin.perm().hasPermission(sender, "quickshop.other.history")) {
+        plugin.text().of(sender, "no-permission");
+        return;
+      }
+      shops.add(shop);
+    } else {
+      switch(parser.getArgs().get(0).toLowerCase(Locale.ROOT)) {
+        case "owned" -> {
+          if(!plugin.perm().hasPermission(sender, "quickshop.history.owned")) {
+            plugin.text().of(sender, "no-permission").send();
+            return;
+          }
+          shops.addAll(plugin.getShopManager().getAllShops(sender.getUniqueId()));
         }
-        final MenuViewer viewer = new MenuViewer(sender.getUniqueId());
-        MenuManager.instance().addViewer(viewer);
+        case "accessible" -> {
+          if(!plugin.perm().hasPermission(sender, "quickshop.history.accessible")) {
+            plugin.text().of(sender, "no-permission").send();
+            return;
+          }
+          shops.addAll(plugin.getShopManager().getAllShops()
+                               .stream().filter(s->s.playerAuthorize(sender.getUniqueId(), BuiltInShopPermission.VIEW_PURCHASE_LOGS)).toList());
+        }
+        case "global" -> {
+          if(!plugin.perm().hasPermission(sender, "quickshop.history.global")) {
+            plugin.text().of(sender, "no-permission").send();
+            return;
+          }
+          shops.addAll(plugin.getShopManager().getAllShops());
+        }
+        default -> {
+          plugin.text().of(sender, "command-incorrect", "/quickshop history <owned/accessible/global/[leave empty]>").send();
+          return;
+        }
+      }
+    }
+    final MenuViewer viewer = new MenuViewer(sender.getUniqueId());
+    MenuManager.instance().addViewer(viewer);
 
-        final MenuPlayer menuPlayer = new BukkitPlayer(sender, QuickShop.getInstance().getJavaPlugin());
+    final MenuPlayer menuPlayer = new BukkitPlayer(sender, QuickShop.getInstance().getJavaPlugin());
 
-        Util.asyncThreadRun(()->{
-            final ShopHistory shopHistory = new ShopHistory(QuickShop.getInstance(), shops);
+    Util.asyncThreadRun(()->{
+      final ShopHistory shopHistory = new ShopHistory(QuickShop.getInstance(), shops);
 
-            try {
-                final List<ShopHistory.ShopHistoryRecord> queryResult = shopHistory.query();
-                final ShopHistory.ShopSummary summary = shopHistory.generateSummary().join();
-                Log.debug(summary.toString());
+      try {
+        final List<ShopHistory.ShopHistoryRecord> queryResult = shopHistory.query();
+        final ShopHistory.ShopSummary summary = shopHistory.generateSummary().join();
+        Log.debug(summary.toString());
 
-                if(queryResult == null) {
-                    return;
-                }
+        if(queryResult == null) {
+          return;
+        }
 
-                viewer.addData(SHOPS_DATA, shops);
-                viewer.addData(HISTORY_RECORDS, queryResult);
-                viewer.addData(HISTORY_SUMMARY, summary);
-                Util.mainThreadRun(()->{
-                    MenuManager.instance().open("qs:history", 1, menuPlayer);
-                });
-
-            } catch(Exception e) {
-                MenuManager.instance().removeViewer(sender.getUniqueId());
-                plugin.text().of(sender.getUniqueId(), "internal-error", sender.getUniqueId()).send();
-                QuickShop.getInstance().logger().error("Couldn't query the shop history for shops {}.", shopHistory.shops(), e);
-            }
+        viewer.addData(SHOPS_DATA, shops);
+        viewer.addData(HISTORY_RECORDS, queryResult);
+        viewer.addData(HISTORY_SUMMARY, summary);
+        Util.mainThreadRun(()->{
+          MenuManager.instance().open("qs:history", 1, menuPlayer);
         });
-    }
 
-    @Override
-    public @Nullable List<String> onTabComplete(@NotNull Player sender, @NotNull String commandLabel, @NotNull CommandParser parser) {
-        if (parser.getArgs().size() == 1) {
-            return List.of("owned", "accessible", "global", plugin.text().of(sender, "history-command-leave-blank").plain());
-        }
-        return Collections.emptyList();
+      } catch(Exception e) {
+        MenuManager.instance().removeViewer(sender.getUniqueId());
+        plugin.text().of(sender.getUniqueId(), "internal-error", sender.getUniqueId()).send();
+        QuickShop.getInstance().logger().error("Couldn't query the shop history for shops {}.", shopHistory.shops(), e);
+      }
+    });
+  }
+
+  @Override
+  public @Nullable List<String> onTabComplete(@NotNull final Player sender, @NotNull final String commandLabel, @NotNull final CommandParser parser) {
+
+    if(parser.getArgs().size() == 1) {
+      return List.of("owned", "accessible", "global", plugin.text().of(sender, "history-command-leave-blank").plain());
     }
+    return Collections.emptyList();
+  }
 }
